Updatding api doc swagger on logout api
